--- a/ControlVehicular/sass/main.scss
+++ b/ControlVehicular/sass/main.scss
@@ -39,6 +39,7 @@
 	@import 'components/form';
 	@import 'components/icon';
 	@import 'components/image';
+	@import 'components/map';
 	@import 'components/list';
 	@import 'components/mini-post';
 	@import 'components/post';
