--- a/ControlVehicular/sass/components/_image.scss
+++ b/ControlVehicular/sass/components/_image.scss
@@ -20,6 +20,7 @@
 			max-width: 40%;
 
 			img {
+                height: 500px;
 				width: 100%;
 			}
 		}
@@ -40,8 +41,10 @@
 			display: block;
 			margin: 0 0 _size(element-margin) 0;
 			width: 100%;
+            height: 500px;
 
 			img {
+                height: 500px;
 				width: 100%;
 			}
 		}
@@ -50,9 +53,11 @@
 			display: block;
 			margin: 0 0 _size(section-spacing) 0;
 			width: 100%;
+            height: 500px;
 
 			img {
 				width: 100%;
+                height: 500px;
 			}
 
 			@include breakpoint(small) {
@@ -64,9 +69,11 @@
 			display: block;
 			margin: 0 0 (_size(element-margin) * 1.5) 0;
 			width: 100%;
+            height: 500px;
 
 			img {
 				width: 100%;
+                height: 500px;
 			}
 		}
 	}
