--- a/ControlVehicular/Views/Shared/_Layout.cshtml
+++ b/ControlVehicular/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Future Imperfect by HTML5 UP</title>
     @Styles.Render("~/Content/css")
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.css">
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -682,6 +683,7 @@
 
 
     </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCCIL8RHRFSKIUHCaeViYANI9oe0N3gCs&callback=initMap"
             async defer></script>
 </body>
