--- a/ControlVehicular/Views/Empresa/Index.cshtml
+++ b/ControlVehicular/Views/Empresa/Index.cshtml
@@ -2,67 +2,19 @@
 @using ControlVehicular.Models
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Empresa";
 }
+
+@Html.Partial("ModalAgregarEmpresa")
 
 <h2>Empresa</h2>
 
-<div id="modalAgregar" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-        <!-- Modal content-->
-        @using (Html.BeginForm("", "", FormMethod.Post, new { id = "formAgregarEmpresa" }))
-        {
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Agregar Colesterol</h4>
-                </div>
-                <div class="modal-body">
-                    
-
-                    <div class="row">
-                        <div class="form-group col-md-12">
-                            @Html.LabelFor(model => model.Nombre)
-                            @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control", @style = "width: 100%; max-width:100%;" })
-                            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-md-12">
-                            @Html.LabelFor(model => model.Fisica)
-                            @Html.CheckBoxFor(model => model.Fisica, new { @class = "form-control"})
-                            @Html.ValidationMessageFor(model => model.Fisica, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-md-12">
-                            @Html.LabelFor(model => model.Cedula)
-                            @Html.TextBoxFor(model => model.Cedula, new { @class = "form-control", @style = "width: 100%; max-width:100%;" })
-                            @Html.ValidationMessageFor(model => model.Cedula, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-md-12">
-                            @Html.LabelFor(model => model.Telefono)
-                            @Html.TextBoxFor(model => model.Telefono, new { @class = "form-control", @style = "width: 100%; max-width:100%;" })
-                            @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                   
-                  
-
-
-                 
-                </div>
-                <div class="modal-footer">
-                    <button type="button" onclick="Guardar()" class="btn btn-outline-info"> Guardar</button>
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
-                </div>
-            </div>
-        }
-    </div>
+<div id="toolbar">
+    <a href="#modalAgregarEmpresa" data-toggle="modal" class="btn btn-default">
+        <i class="fa fa-plus"></i> Agregar Empresa
+    </a>
 </div>
+<br />
 
 <table id="tablaEmpresas"
        class="sortable table-bordered" 
@@ -85,87 +37,13 @@
    <tbody></tbody>
 </table>
 
-<div id="modalEditar" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-        <!-- Modal content-->
-        @using (Html.BeginForm("", "", FormMethod.Post, new { id = "formEditarEmpresa" }))
-        {
-     
-            @Html.Hidden("Codigo")
-         
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Editar Colesterol</h4>
-                </div>
-                <div class="modal-body">
-
-                    <div class="row">
-                        <div class="form-group col-md-12">
-                            @Html.LabelFor(model => model.Nombre)
-                            @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control", @style = "width: 100%; max-width:100%;" })
-                            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-md-12">
-                            @Html.LabelFor(model => model.Fisica)
-                            @Html.CheckBoxFor(model => model.Fisica, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Fisica, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-md-12">
-                            @Html.LabelFor(model => model.Cedula)
-                            @Html.TextBoxFor(model => model.Cedula, new { @class = "form-control", @style = "width: 100%; max-width:100%;" })
-                            @Html.ValidationMessageFor(model => model.Cedula, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-md-12">
-                            @Html.LabelFor(model => model.Telefono)
-                            @Html.TextBoxFor(model => model.Telefono, new { @class = "form-control", @style = "width: 100%; max-width:100%;" })
-                            @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-
-
-
-                     
-                </div>
-
-                <div class="modal-footer">
-
-                    <button type="button" onclick="Borrar()" class="btn btn-danger"> Borrar</button>
-                    <button type="button" onclick="Editar()" class="btn btn-info"> Guardar</button>
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
-
-                </div>
-            </div>
-        }
-    </div>
-</div>
-
-
-
-<div class="row">
-
-    <div class="col-md-12">
-        <br />
-        <a href="#modalAgregar" data-toggle="modal" class="btn btn-default">
-            <i class="fa fa-plus"></i> Agregar Empresa
-        </a>
-    </div>
-</div>
-<br />
-
+<!--
 <button onclick="Elemento()">Editar</button>
+    -->
 
 
 @section Scripts{
-    @Scripts.Render("~/Scripts/Empresa.js")
+    @Scripts.Render("~/Scripts/Empresa/Empresa.js")
     @Scripts.Render("~/bundles/jqueryval")
 
 }
