CRUD de seguros

--- a/ControlVehicular/Views/Shared/_Layout.cshtml
+++ b/ControlVehicular/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             <nav class="links">
                 <ul>
                     <li><a href="@(Url.Action("Index", "Empresa"))">Empresa</a></li>
-                    <li><a href="#">Ipsum</a></li>
+                    <li><a href="@(Url.Action("Index", "Seguros"))">Seguro</a></li>
                     <li><a href="#">Feugiat</a></li>
                     <li><a href="#">Tempus</a></li>
                     <li><a href="#">Adipiscing</a></li>
