--- a/ControlVehicular/Views/Empresa/Index.cshtml
+++ b/ControlVehicular/Views/Empresa/Index.cshtml
@@ -77,7 +77,7 @@
    <thead>
        <tr>
            <th data-field="Nombre" data-sortable="true">Nombre</th>
-           <th data-field="Fisica" data-sortable="true">Fisica</th>
+           <th data-field="Fisica" data-sortable="true" data-formatter="formatoFisica">Fisica</th>
            <th data-field="Cedula" data-sortable="true">Cedula</th>
            <th data-field="Telefono">Telefono</th>
        </tr>
