--- a/ControlVehicular/Views/Shared/_Layout.cshtml
+++ b/ControlVehicular/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>Future Imperfect by HTML5 UP</title>
     @Styles.Render("~/Content/css")
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.css">
+    <link rel="stylesheet" href="~/Content/sweetalert.css" />
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -152,5 +153,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCCIL8RHRFSKIUHCaeViYANI9oe0N3gCs&callback=initMap"
             async defer></script>
+        <script src="~/Scripts/Utilidades.js"></script>
+        <script src="~/Scripts/sweetalert.min.js"></script>
 </body>
 </html>
