Actualizado con la master

--- a/ControlVehicular/Views/Conductor/EmpresaConductor.cshtml
+++ b/ControlVehicular/Views/Conductor/EmpresaConductor.cshtml
@@ -27,10 +27,10 @@
     <thead>
         <tr>
             <th data-field="Nombre" data-sortable="true">Nombre</th>
-            <th data-field="TipoLicencia" data-sortable="true">TipoLicencia</th>
-            <th data-field="FechaVencimiento" data-sortable="true" data-formatter="formatDate">FechaVencimiento</th>
-            <th data-field="Fotografia Cedula">URLFotografiaCedula</th>
-            <th data-field="Fotografia Licencia">URLFotografiaLicencia</th>
+            <th data-field="TipoLicencia" data-sortable="true">Tipo Licencia</th>
+            <th data-field="FechaVencimiento" data-sortable="true" data-formatter="formatDate">Fecha Vencimiento</th>
+            <th data-field="URLFotografiaCedula">Fotografia Cedula </th>
+            <th data-field="URLFotografiaLicencia">Fotografia Licencia</th>
         </tr>
     </thead>
     <tbody></tbody>
@@ -163,7 +163,7 @@
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <button type="button" onclick="guardarEditarConductor()" class="btn-info"><i class="fa fa-plus"></i> Guardar</button>
-                                                                <button type="button" onclick="Borrar()" class="btn-danger"><i class="fa fa-trash"></i> Eliminar</button>
+                                                                <button type="button" onclick="borrarConductor()" class="btn-danger"><i class="fa fa-trash"></i> Eliminar</button>
                                                                 <button type="button" class="btn-default" data-dismiss="modal">Cancelar</button>
                                                             </div>
                                                         </div>
