--- a/ControlVehicular/Views/Unidad/ModalAgregarUnidad.cshtml
+++ b/ControlVehicular/Views/Unidad/ModalAgregarUnidad.cshtml
@@ -52,20 +52,23 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="form-group col-md-4">
+                        <div class="form-group col-sm-12">
                             @Html.LabelFor(model => model.URLFotografiaUnidad)
-                            @Html.EditorFor(model => model.URLFotografiaUnidad, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
+                            @Html.EditorFor(model => model.URLFotografiaUnidad, new { htmlAttributes = new { @Name="fotos", @class = "form-control file", @required = "true", @type="file"} })
                             @Html.ValidationMessageFor(model => model.URLFotografiaUnidad, "", new { @class = "text-danger" })
                         </div>
-
-                        <div class="form-group col-md-4">
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-12">
                             @Html.LabelFor(model => model.URLRevisionTecnica)
-                            @Html.EditorFor(model => model.URLRevisionTecnica, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
+                            @Html.EditorFor(model => model.URLRevisionTecnica, new { htmlAttributes = new { @Name = "fotos", @class = "form-control file", @required = "true", @type = "file" } })
                             @Html.ValidationMessageFor(model => model.URLRevisionTecnica, "", new { @class = "text-danger" })
                         </div>
-                        <div class="form-group col-md-4">
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-12">
                             @Html.LabelFor(model => model.URLTarjetaCirculacion)
-                            @Html.EditorFor(model => model.URLTarjetaCirculacion, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
+                            @Html.EditorFor(model => model.URLTarjetaCirculacion, new { htmlAttributes = new { @Name = "fotos", @class = "form-control file", @required = "true", @type = "file" } })
                             @Html.ValidationMessageFor(model => model.URLTarjetaCirculacion, "", new { @class = "text-danger" })
                         </div>
                     </div>
