--- a/ControlVehicular/Views/Shared/_Layout.cshtml
+++ b/ControlVehicular/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.css">
     <link rel="stylesheet" href="~/Content/sweetalert.css" />
+    <link rel="stylesheet" href="~/Content/nicemodal.css"/>
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
