--- a/ControlVehicular/Views/ClienteHijo/PadreHijo.cshtml
+++ b/ControlVehicular/Views/ClienteHijo/PadreHijo.cshtml
@@ -68,8 +68,8 @@
                                                 </div>
                                             </div>
                                         <div class="modal-footer">
-                                            <button type="button" onclick="guardarHijo()" class="btn-info"><i class="fa fa-plus"></i> Agregar</button>
-                                            <button type="button" class="btn-default" data-dismiss="modal">Cancelar</button>
+                                            <button type="button" onclick="guardarHijo()" class="btn btn-outline-info"><i class="fa fa-plus"></i> Agregar</button>
+                                            <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancelar</button>
                                         </div>
                                     </div>
                            </div>
