--- a/ControlVehicular/Views/Unidad/ModalEditarUnidad.cshtml
+++ b/ControlVehicular/Views/Unidad/ModalEditarUnidad.cshtml
@@ -36,13 +36,19 @@
                     <div class="row">
                         <div class="form-group col-md-4">
                             @Html.LabelFor(model => model.Anno)
-                            @Html.EditorFor(model => model.Anno, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
+                            @Html.DropDownListFor(model => model.UltimoAnnoRevision,
+                           Enumerable.Range(1975, DateTime.Now.Year - 1974).Select(x => new SelectListItem { Text = x.ToString() }),
+                           "Seleccione un año",
+                           new { @class = "form-control", @required = "true" })
                             @Html.ValidationMessageFor(model => model.Anno, "", new { @class = "text-danger" })
                         </div>
 
                         <div class="form-group col-md-4">
                             @Html.LabelFor(model => model.UltimoAnnoRevision)
-                            @Html.EditorFor(model => model.UltimoAnnoRevision, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
+                            @Html.DropDownListFor(model => model.UltimoAnnoRevision,
+                           Enumerable.Range(1975, DateTime.Now.Year - 1974).Select(x => new SelectListItem { Text = x.ToString() }),
+                           "Seleccione un año",
+                           new { @class = "form-control", @required = "true" })
                             @Html.ValidationMessageFor(model => model.UltimoAnnoRevision, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group col-md-4">
@@ -52,20 +58,28 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="form-group col-md-12">
+                            <h3>Fotografias</h3>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="form-group col-md-4">
-                            @Html.LabelFor(model => model.URLFotografiaUnidad)
-                            @Html.EditorFor(model => model.URLFotografiaUnidad, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
-                            @Html.ValidationMessageFor(model => model.URLFotografiaUnidad, "", new { @class = "text-danger" })
+                                <img id="img1" class="imgs" alt="Unidad" width="50" height="50" />
+                                @Html.LabelFor(model => model.URLFotografiaUnidad)
+                                @Html.EditorFor(model => model.URLFotografiaUnidad, new { htmlAttributes = new { @Name = "fotos", @class = "form-control file", @required = "true", @type = "file" } })
+                                @Html.ValidationMessageFor(model => model.URLFotografiaUnidad, "", new { @class = "text-danger" })
                         </div>
 
                         <div class="form-group col-md-4">
+                                <img id="img2" class="imgs" alt="Revision Tecnica" width="50" height="50" />
                             @Html.LabelFor(model => model.URLRevisionTecnica)
-                            @Html.EditorFor(model => model.URLRevisionTecnica, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
+                            @Html.EditorFor(model => model.URLRevisionTecnica, new { htmlAttributes = new { @Name = "fotos", @class = "form-control file", @required = "true", @type = "file" } })
                             @Html.ValidationMessageFor(model => model.URLRevisionTecnica, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group col-md-4">
+                                <img id="img3" class="imgs" alt="Tarjeta de Circulacion" width="50" height="50" />
                             @Html.LabelFor(model => model.URLTarjetaCirculacion)
-                            @Html.EditorFor(model => model.URLTarjetaCirculacion, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
+                            @Html.EditorFor(model => model.URLTarjetaCirculacion, new { htmlAttributes = new { @Name = "fotos", @class = "form-control file", @required = "true", @type = "file" } })
                             @Html.ValidationMessageFor(model => model.URLTarjetaCirculacion, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -83,7 +97,7 @@
                     <button type="button" onclick="Borrar()" class="btn btn-outline-danger mr-auto">Eliminar</button>
 
                     <button type="button" onclick="editarUnidad()" class="btn btn-outline-info"><i class="fa fa-plus"></i> Guardar</button>
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         }
