--- a/ControlVehicular/Views/Conductor/EmpresaConductor.cshtml
+++ b/ControlVehicular/Views/Conductor/EmpresaConductor.cshtml
@@ -29,12 +29,14 @@
             <th data-field="Nombre" data-sortable="true">Nombre</th>
             <th data-field="TipoLicencia" data-sortable="true">Tipo Licencia</th>
             <th data-field="FechaVencimiento" data-sortable="true" data-formatter="formatDate">Fecha Vencimiento</th>
-            <th data-field="URLFotografiaCedula">Fotografia Cedula </th>
+            <th data-field="URLFotografiaCedula">Fotografia Cédula </th>
             <th data-field="URLFotografiaLicencia">Fotografia Licencia</th>
         </tr>
     </thead>
     <tbody></tbody>
 </table>
+
+@Html.Partial("Modal_Images_Conductor")
 
 <!-- Modal -->
 <div id="modalAgregarConductor" class="modal fade" role="dialog">
@@ -47,68 +49,70 @@
         {
             @Html.Hidden("Empresa") // Para el codigo de la empresa que ocupa el Conductor
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title">Agregar conductor</h4>
-                                        </div>
-                                        <div class="modal-body">
-                                            <div class="input-group col-md-12">
-                                                <span class="input-group-addon" id="basic-addon1">
-                                                    @Html.LabelFor(model => model.Nombre)
-                                                </span>
-                                                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-                                            </div>
-                                            <br />
-                                            <div class="input-group">
-                                                <span class="input-group-addon" id="basic-addon1">
-                                                    @Html.LabelFor(model => model.TipoLicencia)
-                                                </span>
-                                                @Html.EditorFor(model => model.TipoLicencia, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.TipoLicencia, "", new { @class = "text-danger" })
-                                            </div>
-                                            <br />
-                                            <div class="input-group">
-                                                <span class="input-group-addon" id="basic-addon1">
-                                                    @Html.LabelFor(model => model.FechaVencimiento)
-                                                </span>
-                                                @Html.EditorFor(model => model.FechaVencimiento, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.FechaVencimiento, "", new { @class = "text-danger" })
-                                            </div>
-                                            <br />
-
-                                           <div>
-                                               @Html.LabelFor(m => m.FileCedulaImg, new {  @class = "custom-file-upload" })
-                                               @Html.EditorFor(model => model.URLFotografiaCedula, new { htmlAttributes = new { @class = "form-control", disabled = "true" } })
-                                               @Html.TextBoxFor(m => m.FileCedulaImg, new { type = "file", name="files"})
-                                               @Html.ValidationMessageFor(m => m.FileCedulaImg)
-                                           </div>
-                                            <div class="wrapper">
-                                                <div class="imageSelector">
-                                                    <img id="imagenPreview" class="imageSelected" />
-                                                    <span class="editImage"  onclick="triggerUpload(event, '#formAgregarConductor #FileCedulaImg');"><i class="fa fa-pencil"></i></span>
-                                                </div>
-                                            </div>
-                                            <br />
-                                            <div>
-                                                @Html.LabelFor(m => m.FileLicenciaImg, new { @class = "custom-file-upload" } )
-                                                @Html.EditorFor(model => model.URLFotografiaLicencia, new { htmlAttributes = new { @class = "form-control", disabled="true"} })
-                                                @Html.TextBoxFor(m => m.FileLicenciaImg, new { type = "file", name = "files"})
-                                                @Html.ValidationMessageFor(m => m.FileLicenciaImg)
-                                            </div>
-                                        </div>
-
-
-                   
-
-
-
-                                        <div class="modal-footer">
-                                            <button type="button" onclick="guardarConductor()" class="btn-info"><i class="fa fa-plus"></i> Agregar</button>
-                                            <button type="button" class="btn-default" data-dismiss="modal">Cancelar</button>
-                                        </div>
-                                    </div>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Agregar conductor</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="input-group col-md-12">
+                        <span class="input-group-addon" id="basic-addon1">
+                            @Html.LabelFor(model => model.Nombre)
+                        </span>
+                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                    </div>
+                    <br />
+                    <div class="input-group">
+                        <span class="input-group-addon" id="basic-addon1">
+                            @Html.LabelFor(model => model.TipoLicencia)
+                        </span>
+                        @Html.EditorFor(model => model.TipoLicencia, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.TipoLicencia, "", new { @class = "text-danger" })
+                    </div>
+                    <br />
+                    <div class="input-group">
+                        <span class="input-group-addon" id="basic-addon1">
+                            @Html.LabelFor(model => model.FechaVencimiento)
+                        </span>
+                        @Html.EditorFor(model => model.FechaVencimiento, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.FechaVencimiento, "", new { @class = "text-danger" })
+                    </div>
+                    <br />
+                    <div class="row">
+                        <div class="form-group col-md-4">
+                            <div>
+                                @Html.LabelFor(m => m.FileCedulaImg, new { @class = "custom-file-upload" })
+                                @Html.TextBoxFor(m => m.FileCedulaImg, new { type = "file", name = "files" })
+                                @Html.ValidationMessageFor(m => m.FileCedulaImg)
+                            </div>
+                            <div class="wrapper">
+                                <div class="imageSelector">
+                                    <img id="imagenPreviewCedula"  class="imgs" alt="Cédula"  width="100%" height="100%" />
+                                    <span class="editImage" onclick="triggerUpload(event, '#formAgregarConductor #FileCedulaImg');"><i class="fa fa-pencil"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group col-md-4">
+                            <div>
+                                @Html.LabelFor(m => m.FileLicenciaImg, new { @class = "custom-file-upload" })
+                                @Html.TextBoxFor(m => m.FileLicenciaImg, new { type = "file", name = "files" })
+                                @Html.ValidationMessageFor(m => m.FileLicenciaImg)
+                            </div>
+                            <div class="wrapper">
+                                <div class="imageSelector">
+                                    <img id="imagenPreviewLicencia"  class="imgs" alt="Licencia"  width="100%" height="100%" />
+                                    <span class="editImage" onclick="triggerUpload(event, '#formAgregarConductor #FileLicenciaImg');"><i class="fa fa-pencil"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                    <div class="modal-footer">
+                        <button type="button" onclick="guardarConductor()" class="btn-info"><i class="fa fa-plus"></i> Agregar</button>
+                        <button type="button" class="btn-default" data-dismiss="modal">Cancelar</button>
+                    </div>
+                </div>
+            </div>
         }
     </div>
 </div>
@@ -153,18 +157,34 @@
                                                                     @Html.ValidationMessageFor(model => model.FechaVencimiento, "", new { @class = "text-danger" })
                                                                 </div>
                                                                 <br />
-                                                                <div>
-                                                                    @Html.LabelFor(m => m.FileCedulaImgEditar, new { @class = "custom-file-upload" })
-                                                                    @Html.EditorFor(model => model.URLFotografiaCedula, new { htmlAttributes = new { @class = "form-control", disabled = "true" } })
-                                                                    @Html.TextBoxFor(m => m.FileCedulaImgEditar, new { type = "file", name = "files" })
-                                                                    @Html.ValidationMessageFor(m => m.FileCedulaImgEditar)
-                                                                </div>
-                                                                <br />
-                                                                <div>
-                                                                    @Html.LabelFor(m => m.FileLicenciaImgEditar, new { @class = "custom-file-upload" })
-                                                                    @Html.EditorFor(model => model.URLFotografiaLicencia, new { htmlAttributes = new { @class = "form-control", disabled = "true" } })
-                                                                    @Html.TextBoxFor(m => m.FileLicenciaImgEditar, new { type = "file", name = "files" })
-                                                                    @Html.ValidationMessageFor(m => m.FileLicenciaImgEditar)
+                                                                <div class="row">
+                                                                    <div class="form-group col-md-4">
+                                                                        <div>
+                                                                            @Html.LabelFor(m => m.FileCedulaImgEditar, new { @class = "custom-file-upload" })
+                                                                            @Html.TextBoxFor(m => m.FileCedulaImgEditar, new { type = "file", name = "files" })
+                                                                            @Html.ValidationMessageFor(m => m.FileCedulaImgEditar)
+                                                                        </div>
+                                                                        <div class="wrapper">
+                                                                            <div class="imageSelector">
+                                                                                <img id="imagenPreviewCedulaEditar"  class="imgs" alt="Cédula"  width="100%" height="100%" />
+                                                                                <span class="editImage" onclick="triggerUpload(event, '#formEditarConductor #FileCedulaImgEditar');"><i class="fa fa-pencil"></i></span>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="form-group col-md-4">
+                                                                        <div>
+                                                                            @Html.LabelFor(m => m.FileLicenciaImgEditar, new { @class = "custom-file-upload" })
+                                                                            @Html.TextBoxFor(m => m.FileLicenciaImgEditar, new { type = "file", name = "files" })
+                                                                            @Html.ValidationMessageFor(m => m.FileLicenciaImgEditar)
+                                                                        </div>
+                                                                        <div class="wrapper">
+                                                                            <div class="imageSelector">
+                                                                              
+                                                                                <img id="imagenPreviewLicenciaEditar"  class="imgs" alt="Licencia"  width="100%" height="100%" />
+                                                                                <span class="editImage" onclick="triggerUpload(event, '#formEditarConductor #FileLicenciaImgEditar');"><i class="fa fa-pencil"></i></span>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                             <div class="modal-footer">
