no se que commit

--- a/ControlVehicular/Views/Unidad/ModalAgregarUnidad.cshtml
+++ b/ControlVehicular/Views/Unidad/ModalAgregarUnidad.cshtml
@@ -89,8 +89,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" onclick="nuevaUnidad()" class="btn btn-outline-info"><i class="fa fa-plus"></i> Agregar</button>
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
+                    <button type="button" onclick="nuevaUnidad()" class="btn btn-info"><i class="fa fa-plus"></i> Agregar</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         }
