--- a/ControlVehicular/Content/main.css
+++ b/ControlVehicular/Content/main.css
@@ -1697,8 +1697,6 @@
 
 	input[type="submit"],
 	input[type="reset"],
-	input[type="button"],
-	button,
 	.button {
 		-moz-appearance: none;
 		-webkit-appearance: none;
@@ -1729,8 +1727,6 @@
 
 		input[type="submit"]:hover,
 		input[type="reset"]:hover,
-		input[type="button"]:hover,
-		button:hover,
 		.button:hover {
 			box-shadow: inset 0 0 0 1px #2ebaae;
 			color: #2ebaae !important;
@@ -1747,12 +1743,7 @@
 		input[type="submit"]:before, input[type="submit"]:after,
 		input[type="reset"]:before,
 		input[type="reset"]:after,
-		input[type="button"]:before,
-		input[type="button"]:after,
-		button:before,
-		button:after,
-		.button:before,
-		.button:after {
+ {
 			color: #aaaaaa;
 			position: relative;
 		}
@@ -1768,8 +1759,6 @@
 
 		input[type="submit"]:after,
 		input[type="reset"]:after,
-		input[type="button"]:after,
-		button:after,
 		.button:after {
 			left: 1em;
 			padding: 0 0.75em 0 0;
@@ -2199,13 +2188,13 @@
 			display: block;
 			margin: 0 0 3em 0;
 			width: 100%;
-            height: 300px;
+			height: 300px;
 		}
 
 			.map.featured > div {
 				width: 100%;
-			    height: 100%;
-            }
+				height: 100%;
+			}
 
 			@media screen and (max-width: 736px) {
 
