Clientes de Unidad

--- a/ControlVehicular/Views/Home/Index.cshtml
+++ b/ControlVehicular/Views/Home/Index.cshtml
@@ -8,6 +8,26 @@
     <div id="map"></div>
 </div>
 
+
+<table id="tablaViajes"
+       class="sortable table-bordered"
+       data-toolbar="#toolbar"
+       data-search="true"
+       data-pagination="true"
+       data-minimum-count-columns="2"
+       data-id-field="Codigo"
+       data-unique-id="Codigo"
+       data-page-size="8"
+       data-show-footer="false">
+    <thead>
+        <tr>
+            <th data-field="Nombre" data-sortable="true">Nombre</th>
+            <th data-field="MostrarComo" data-sortable="true">MostrarComo</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
+
 @section Scripts{
     @Scripts.Render("~/Scripts/Mapa.js")
 }
