--- a/ControlVehicular/Content/main.css
+++ b/ControlVehicular/Content/main.css
@@ -3255,9 +3255,13 @@
 		@media screen and (max-width: 736px) {
 
 			#wrapper {
-				padding: 1.5em;
+				padding: 0px;
 			}
 
+
+			.sm-padding{
+				padding: 1.5em
+			}
 		}
 
 		body.single #wrapper {
