--- a/ControlVehicular/Views/Shared/_Layout.cshtml
+++ b/ControlVehicular/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Wrapper -->
-    <div id="wrapper">
+    <div id="wrapper" class="">
 
         <!-- Header -->
         <header id="header">
@@ -91,26 +91,22 @@
         </section>
 
         <!-- Main -->
+        
         <div id="main">
-
-                @RenderBody()
-
-
-             
-
-    </div>
-    @Scripts.Render("~/bundles/jquery")
-    @RenderSection("scripts", required: false)
+            @RenderBody()
+        </div>
+        @Scripts.Render("~/bundles/jquery")
+        @RenderSection("scripts", required: false)
 
 
-    @Scripts.Render("~/bundles/bootstrap")
-    <script>
-       
+        @Scripts.Render("~/bundles/bootstrap")
+        <script>
 
-    </script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCCIL8RHRFSKIUHCaeViYANI9oe0N3gCs&callback=initMap"
-            async defer></script>
+
+        </script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCCIL8RHRFSKIUHCaeViYANI9oe0N3gCs&callback=initMap"
+                async defer></script>
         <script src="~/Scripts/Utilidades.js"></script>
         <script src="~/Scripts/sweetalert.min.js"></script>
 </body>
