--- a/ControlVehicular/Views/Unidad/ModalEditarUnidad.cshtml
+++ b/ControlVehicular/Views/Unidad/ModalEditarUnidad.cshtml
@@ -94,10 +94,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" onclick="Borrar()" class="btn btn-outline-danger mr-auto">Eliminar</button>
-
-                    <button type="button" onclick="editarUnidad()" class="btn btn-outline-info"><i class="fa fa-plus"></i> Guardar</button>
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
+                    <button type="button" onclick="editarUnidad()" class="btn btn-info"><i class="fa fa-plus"></i> Guardar</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         }
