--- a/ControlVehicular/Views/ClienteHijo/PadreHijo.cshtml
+++ b/ControlVehicular/Views/ClienteHijo/PadreHijo.cshtml
@@ -35,7 +35,7 @@
 </table>
 
 <!-- Modal -->
-<div id="modalAgregarHijo" class="modal fadeInUp transitionIn niceModal" role="dialog">
+<div id="modalAgregarHijo" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <!-- Modal content-->
         @using (Html.BeginForm("", "", FormMethod.Post, new { id = "formAgregarHijo" }))
@@ -44,32 +44,26 @@
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                     <div class="modal-content">
                                         <div class="modal-header transitionIn ">
-                                            <i class="niceModal-header-icon fa fa-plus"></i>
-                                            <h2 class="niceModal-header-title">Agregar Hijo Cliente</h2>
-                                            <p class="niceModal-header-subtitle">Digite la informacion del hijo que desea agregar</p>
-                                            <a href="javascript:void(0)" class="niceModal-button niceModal-button-close" data-dismiss="modal"></a>
+                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                            <h4 class="modal-title">Agrega Hijo</h4>
                                         </div>
                                         <div class="modal-body">
                                             <div class="niceModal-content">
-                                                <div class="input-group col-md-12">
-                                                    <span class="input-group-addon" id="basic-addon1">
-                                                        @Html.LabelFor(model => model.Nombre)
-                                                    </span>
+                                                <div class="form-group">
+                                                    @Html.LabelFor(model => model.Nombre)
                                                     @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
                                                     @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                                                 </div>
                                                 <br />
-                                                <div class="input-group">
-                                                    <span class="input-group-addon" id="basic-addon1">
-                                                        @Html.LabelFor(model => model.MostrarComo)
-                                                    </span>
+                                                <div class="form-group">
+                                                     @Html.LabelFor(model => model.MostrarComo)
                                                     @Html.EditorFor(model => model.MostrarComo, new { htmlAttributes = new { @class = "form-control" } })
                                                     @Html.ValidationMessageFor(model => model.MostrarComo, "", new { @class = "text-danger" })
                                                 </div>
                                             </div>
                                         <div class="modal-footer">
-                                            <button type="button" onclick="guardarHijo()" class="btn btn-outline-info"><i class="fa fa-plus"></i> Agregar</button>
-                                            <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancelar</button>
+                                            <button type="button" onclick="guardarHijo()" class="btn btn-info"><i class="fa fa-plus"></i> Agregar</button>
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                                         </div>
                                     </div>
                            </div>
@@ -92,27 +86,22 @@
                                                                 <h4 class="modal-title">Editar conductor</h4>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <div class="input-group col-md-12">
-                                                                    <span class="input-group-addon" id="basic-addon1">
-                                                                        @Html.LabelFor(model => model.Nombre)
-                                                                    </span>
+                                                                <div class="form-group">
+                                                                    @Html.LabelFor(model => model.Nombre)
                                                                     @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
                                                                     @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                                                                 </div>
                                                                 <br />
-                                                                <div class="input-group">
-                                                                    <span class="input-group-addon" id="basic-addon1">
-                                                                        @Html.LabelFor(model => model.MostrarComo)
-                                                                    </span>
+                                                                <div class="form-group">
+                                                                    @Html.LabelFor(model => model.MostrarComo)
                                                                     @Html.EditorFor(model => model.MostrarComo, new { htmlAttributes = new { @class = "form-control" } })
                                                                     @Html.ValidationMessageFor(model => model.MostrarComo, "", new { @class = "text-danger" })
                                                                 </div>
                                                                 <br />
                                                             </div>
                                                             <div class="modal-footer">
-                                                                <button type="button" onclick="guardarEditarHijo()" class="btn-info"><i class="fa fa-plus"></i> Guardar</button>
-                                                                <button type="button" onclick="borrarCliente()" class="btn-danger"><i class="fa fa-trash"></i> Eliminar</button>
-                                                                <button type="button" class="btn-default" data-dismiss="modal">Cancelar</button>
+                                                                <button type="button" onclick="guardarEditarHijo()" class="btn btn-info"><i class="fa fa-plus"></i> Guardar</button>
+                                                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                                                             </div>
                                                         </div>
         }
