--- a/ControlVehicular/Views/Empresa/ModalEditarEmpresa.cshtml
+++ b/ControlVehicular/Views/Empresa/ModalEditarEmpresa.cshtml
@@ -54,9 +54,8 @@
 
                 <div class="modal-footer">
 
-                    <button type="button" onclick="Borrar()" class="btn btn-danger"> Borrar</button>
                     <button type="button" onclick="Editar()" class="btn btn-info"> Guardar</button>
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
 
                 </div>
             </div>
