--- a/ControlVehicular/Views/Ruta/ModalEditarRuta.cshtml
+++ b/ControlVehicular/Views/Ruta/ModalEditarRuta.cshtml
@@ -17,8 +17,7 @@
                    
 
                 <div class="modal-body">
-                    <div class="row">
-                        <div class="form-group col-md-4">
+                        <div class="form-group">
                             @Html.LabelFor(model => model.Conductor)
                             @Html.DropDownListFor(model => model.Conductor,
                            new SelectList(Model.ListaConductores, "Codigo", "Nombre"),
@@ -26,20 +25,19 @@
                             @Html.ValidationMessageFor(model => model.Conductor, "", new { @class = "text-danger" })
                         </div>
 
-                        <div class="form-group col-md-4">
+                        <div class="form-group">
                             @Html.LabelFor(model => model.Vehiculo)
                             @Html.DropDownListFor(model => model.Vehiculo,
                            new SelectList(Model.ListaUnidades, "Codigo", "Modelo"),
                            "", new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.Vehiculo, "", new { @class = "text-danger" })
                         </div>
-                        <div class="form-group col-md-4">
+                        <div class="form-group">
                             @Html.LabelFor(model => model.Nombre)
                             @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
                             @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                         </div>
 
-                    </div>
                     <div>
                         @Html.Hidden("Empresa", "VALORDELAEMPRESA")
                     </div>
