--- a/ControlVehicular/Views/Seguros/Index.cshtml
+++ b/ControlVehicular/Views/Seguros/Index.cshtml
@@ -8,6 +8,15 @@
 
 <h2>Seguro</h2>
 
+<div class="row">
+
+    <div class="col-md-12">
+        <br />
+        <a href="#modalAgregar" data-toggle="modal" class="btn btn-default">
+            <i class="fa fa-plus"></i> Agregar Seguro
+        </a>
+    </div>
+</div>
 <div id="modalAgregar" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <!-- Modal content-->
@@ -70,8 +79,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" onclick="Guardar()" class="btn btn-outline-info"> Guardar</button>
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
+                    <button type="button" onclick="Guardar()" class="btn btn-info"> Guardar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         }
@@ -163,11 +172,8 @@
                 </div>
 
                 <div class="modal-footer">
-
-                    <button type="button" onclick="Borrar()" class="btn btn-danger"> Borrar</button>
                     <button type="button" onclick="Editar()" class="btn btn-info"> Guardar</button>
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
-
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         }
@@ -176,15 +182,7 @@
 
 
 
-<div class="row">
 
-    <div class="col-md-12">
-        <br />
-        <a href="#modalAgregar" data-toggle="modal" class="btn btn-default">
-            <i class="fa fa-plus"></i> Agregar Seguro
-        </a>
-    </div>
-</div>
 <br />
 
 
