--- a/ControlVehicular/Views/Unidad/Index.cshtml
+++ b/ControlVehicular/Views/Unidad/Index.cshtml
@@ -2,7 +2,7 @@
 <h2>Unidades</h2>
 
 <div id="toolbar">
-    <a href="#modalAgregarUnidad" data-toggle="modal" class="btn btn-info">
+    <a href="#modalAgregarUnidad" data-toggle="modal" class="btn btn-default">
         <i class="fa fa-plus"></i> Agregar Unidad
     </a>
 </div>
