--- a/ControlVehicular/Views/Unidad/ModalAgregarUnidad.cshtml
+++ b/ControlVehicular/Views/Unidad/ModalAgregarUnidad.cshtml
@@ -90,7 +90,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" onclick="nuevaUnidad()" class="btn btn-info"><i class="fa fa-plus"></i> Agregar</button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         }
