--- a/ControlVehicular/Views/Empresa/Index.cshtml
+++ b/ControlVehicular/Views/Empresa/Index.cshtml
@@ -10,7 +10,7 @@
 <h2>Empresa</h2>
 
 <div id="toolbar">
-    <a href="#modalAgregarEmpresa" data-toggle="modal" class="btn btn-default">
+    <a href="#modalAgregarEmpresa" data-toggle="modal" class="btn btn-info">
         <i class="fa fa-plus"></i> Agregar Empresa
     </a>
 </div>
