--- a/ControlVehicular/Views/Empresa/ModalEditarEmpresa.cshtml
+++ b/ControlVehicular/Views/Empresa/ModalEditarEmpresa.cshtml
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="modal-footer">
-
+                    <button type="button" onclick="seleccionarEmpresa()" class="btn btn-success pull-left"> Seleccionar</button>
                     <button type="button" onclick="Borrar()" class="btn btn-danger"> Borrar</button>
                     <button type="button" onclick="Editar()" class="btn btn-info"> Guardar</button>
                     <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
