--- a/ControlVehicular/Views/ClienteHijo/PadreHijo.cshtml
+++ b/ControlVehicular/Views/ClienteHijo/PadreHijo.cshtml
@@ -12,9 +12,9 @@
 
 <h2>Hijos Cliente</h2>
 <h5><strong>Padre Codigo:</strong> <span class="text-muted" id="padreId">@ViewBag.Padre.Codigo</span></h5>
-<p>
+<div id="toolbar">
     <button type="button" class="btn btn-default" onclick="AbrirModalAgregarHijo();">Agregar Hijo</button>
-</p>
+</div>
 <table id="TablaHijos"
        class="sortable table-bordered"
        data-toolbar="#toolbar"
