--- a/ControlVehicular/Views/Empresa/ModalAgregarEmpresa.cshtml
+++ b/ControlVehicular/Views/Empresa/ModalAgregarEmpresa.cshtml
@@ -45,8 +45,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" onclick="Guardar()" class="btn btn-outline-info"> Guardar</button>
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
+                    <button type="button" onclick="Guardar()" class="btn btn-info"> Guardar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         }
