--- a/ControlVehicular/Views/Ruta/Index.cshtml
+++ b/ControlVehicular/Views/Ruta/Index.cshtml
@@ -4,7 +4,7 @@
 <h2>Rutas</h2>
 
 <div id="toolbar">
-    <a href="#modalAgregarRuta" data-toggle="modal" class="btn btn-default">
+    <a href="#modalAgregarRuta" data-toggle="modal" class="btn btn-info">
         <i class="fa fa-plus"></i> Agregar Ruta
     </a>
 </div>
