Ruta cliente con padre x default
Y tiene boton en el modal de editar padrecliente para ir a ruta cliente

--- a/ControlVehicular/Views/ClienteRuta/RutaClientesEmpresa.cshtml
+++ b/ControlVehicular/Views/ClienteRuta/RutaClientesEmpresa.cshtml
@@ -3,6 +3,8 @@
 
 <h2>Cliente Rutas</h2>
 <h5><strong>Empresa Codigo:</strong> <span class="text-muted" id="EmpresaId">@ViewBag.Empresa.Codigo</span></h5>
+<h5><strong>Padre Nombre:</strong> <span class="text-muted" id="PadreNombre">@ViewBag.Padre.Nombre</span></h5>
+<h5><strong>Padre Codigo:</strong> <span class="text-muted" id="PadreId">@ViewBag.Padre.Codigo</span></h5>
 @section  Scripts{
     @Scripts.Render("~/bundles/jqueryval")
     <script src="@Url.Content("~/Scripts/RutaClienteEmpresa/RutaClientes.js")"></script>
