--- a/ControlVehicular/Views/PadreCliente/Cliente.cshtml
+++ b/ControlVehicular/Views/PadreCliente/Cliente.cshtml
@@ -134,6 +134,7 @@
                 <div class="modal-footer">
                     <div class="pull-left">
                         <a href="" class="btn btn-success" id="verHijos">Hijos</a>
+                        <a href="" class="btn btn-success" id="verRutasHijos">Rutas</a>
                     </div>
                     <div class="pull-right">
                         <button type="button" onclick="guardarEditarCliente()" class="btn btn-info"><i class="fa fa-plus"></i> Editar</button>
