--- a/ControlVehicular/Views/PadreCliente/Cliente.cshtml
+++ b/ControlVehicular/Views/PadreCliente/Cliente.cshtml
@@ -14,7 +14,7 @@
 
 
 <div id="toolbar">
-    <button type="button" class="btn btn-default" onclick="AbrirModalAgregarCliente();">Agregar Cliente</button>
+    <button type="button" class="btn btn-info" onclick="AbrirModalAgregarCliente();">Agregar Cliente</button>
 </div>
 <br />
 <table id="tablaPadreCliente"
