--- a/ControlVehicular/Views/Unidad/ModalEditarUnidad.cshtml
+++ b/ControlVehicular/Views/Unidad/ModalEditarUnidad.cshtml
@@ -94,7 +94,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" onclick="irMapa()" class="btn btn-success pull-left"><i class="fa fa-plus"></i> Ir Napa</button>
+                    <button type="button" onclick="irMapa()" class="btn btn-success pull-left"> Ir a Mapa</button>
 
                     <button type="button" onclick="editarUnidad()" class="btn btn-info"><i class="fa fa-plus"></i> Guardar</button>
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
